--- a/charts/flogoprovisioner/config/otel/output-otel.conf
+++ b/charts/flogoprovisioner/config/otel/output-otel.conf
@@ -8,5 +8,6 @@
     Host  otel-userapp-logs
     Port  4318
     Log_response_payload True
+    Logs_body_key $log
     Tls                  Off
     Tls.verify           Off
