CCRB'd fix for PCP-5747.

--- a/charts/tp-cp-core-finops/charts/monitoring-service/templates/monitoring-service.yaml
+++ b/charts/tp-cp-core-finops/charts/monitoring-service/templates/monitoring-service.yaml
@@ -236,10 +236,7 @@ spec:
         - name: WRITE_POSTGRES_DATABASE_SSL_KEY
           value: ""
         - name: WRITE_POSTGRES_DATABASE_SSL_ROOT_CERT
-          valueFrom:
-            configMapKeyRef:
-              name: {{ include "monitoring-service.consts.cp.db.configuration" . }}
-              key: DBSSLRootCert
+          value: /private/finops/certificates/global-bundle.pem
         - name: READ_POSTGRES_DATABASE_SSL_MODE
           valueFrom:
             configMapKeyRef:
@@ -250,10 +247,7 @@ spec:
         - name: READ_POSTGRES_DATABASE_SSL_KEY
           value: ""
         - name: READ_POSTGRES_DATABASE_SSL_ROOT_CERT
-          valueFrom:
-            configMapKeyRef:
-              name: {{ include "monitoring-service.consts.cp.db.configuration" . }}
-              key: DBSSLRootCert
+          value: /private/finops/certificates/global-bundle.pem
         volumeMounts:
         - name: store-vol
           mountPath: /private/finops/certificates
