--- a/charts/oauth2-proxy-manifests/Chart.yaml
+++ b/charts/oauth2-proxy-manifests/Chart.yaml
@@ -1,9 +1,13 @@
+# Copyright © 2024. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+
 name: oauth2-proxy
 # Original oauth2-proxy chart version: 6.17.0
-# Original oauth2-proxy version: 7.4.0
-version: 10.1.002
+# Original oauth2-proxy version: 7.5.1
+version: 10.1.006
 apiVersion: v2
-appVersion: 1.1.0
+appVersion: 1.2.0
 home: https://oauth2-proxy.github.io/oauth2-proxy/
 description: A reverse proxy that provides authentication with Google, Github or other providers
 keywords:
