--- a/charts/tibco-developer-hub/templates/well-known-configuration-ingress.yaml
+++ b/charts/tibco-developer-hub/templates/well-known-configuration-ingress.yaml
@@ -19,6 +19,8 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: HTTPS
     nginx.ingress.kubernetes.io/upstream-vhost: {{ $cpHostname }}
     nginx.ingress.kubernetes.io/rewrite-target: /.well-known/openid-configuration
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_set_header x-cp-host {{ $cpHostname }};
 spec:
   ingressClassName: nginx
   rules:
