--- a/charts/platform-bootstrap/Chart.yaml
+++ b/charts/platform-bootstrap/Chart.yaml
@@ -4,18 +4,20 @@
 # in the license file that is distributed with this file.
 #
 
-
 apiVersion: v2
-name: tp-cp-configuration
-description: TIBCO Platform Control Plane Configuration chart
+name: platform-bootstrap
+description: TIBCO Platform bootstrap chart
 type: application
-version: 1.2.16
+version: 1.2.23
 appVersion: "1.2.0"
 keywords:
   - tibco-platform
-  - control-plane
-  - infra
-  - configuration
+  - platform
+  - bootstrap
 annotations:
   app.helm.sh/component: control-plane
-  app.helm.sh/name: tp-cp-configuration
+  app.helm.sh/name: platform-bootstrap
+dependencies:
+  - name: tp-cp-bootstrap
+    version: "1.2.27"
+    repository: alias:tibco-platform
