--- a/charts/tp-cp-recipes/values.yaml
+++ b/charts/tp-cp-recipes/values.yaml
@@ -5,9 +5,4 @@
 #
 
 
-apiVersion: v2
-name: otel-collector
-version: 0.89.4
-description: OpenTelemetry Collector Helm chart for Kubernetes
-type: application
-appVersion: 0.98.0
+# Bundle RECIPE charts
