Picked up the latest available version of tp-cp-core and tp-cp-configuration.

--- a/charts/tp-cp-core/charts/orchestrator/templates/cp-orch.yaml
+++ b/charts/tp-cp-core/charts/orchestrator/templates/cp-orch.yaml
@@ -349,6 +349,8 @@ spec:
           value: {{ (.Values.global.external.cronJobReportsEmailAlias) }}
         - name: TRANSACTIONAL_EMAIL_CC_ADDRESSES
           value: {{ (.Values.global.external.platformEmailNotificationCcAddresses) }}
+        - name: CP_HELM_REPO
+          value: {{ .Values.global.external.helmRepo }}
         volumeMounts:
         - name: store-vol
           mountPath: /private/tsc/config
