--- a/charts/tp-cp-core/charts/orchestrator/values.yaml
+++ b/charts/tp-cp-core/charts/orchestrator/values.yaml
@@ -7,6 +7,7 @@
 # Global section will apply to this chart and all of its subcharts.
 global:
   external:
+    helmRepo: "https://tibcosoftware.github.io/tp-helm-charts"
     cronJobReportsEmailAlias: ""
     platformEmailNotificationCcAddresses: ""
     environment: ""
