--- a/charts/dp-core-infrastructure/charts/tp-tibtunnel/templates/deployment.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-tibtunnel/templates/deployment.yaml
@@ -32,6 +32,11 @@ spec:
         {{- /* Converting the command from "" to ["",""]. Split input command by space and coverting it into array of string */}}
         {{- /* @input: "tp-tibtunnel connect --remote-debug -s localhost:80 connecturl" */}}
         {{- /* @output: ["tp-tibtunnel", "connect", "--remote-debug","-s","localhost:80","connecturl"] */}}
+        env:
+         - name: HTTP_PROXY
+           value: http://192.168.1.205:3128
+         - name: HTTPS_PROXY
+           value: http://192.168.1.205:3128
         command: [{{- range $v := (mustRegexSplit " +" (include "tp-tibtunnel.helpers.command.connect" .) -1) -}}"{{- $v -}}",{{- end -}}]
         {{- if .Values.securityContext.tibtunnel }}
         securityContext:
