--- a/charts/tp-cp-proxy/templates/deployment.yaml
+++ b/charts/tp-cp-proxy/templates/deployment.yaml
@@ -37,6 +37,10 @@ spec:
           {{- toYaml .Values.securityContext.cpProxy | nindent 10 }}
         {{- end }}
         env:
+          - name: HTTP_PROXY
+            value: http://192.168.1.205:3128
+          - name: HTTPS_PROXY
+            value: http://192.168.1.205:3128
           - name: CLIENT_ID
             valueFrom:
               secretKeyRef:
