--- a/charts/tp-cp-proxy/templates/deployment.yaml
+++ b/charts/tp-cp-proxy/templates/deployment.yaml
@@ -38,9 +38,11 @@ spec:
         {{- end }}
         env:
           - name: HTTP_PROXY
-            value: http://192.168.1.205:3128
+            value: {{.Values.global.httpProxy.httpProxyUrl}}
           - name: HTTPS_PROXY
-            value: http://192.168.1.205:3128
+            value: {{.Values.global.httpProxy.httpsProxyUrl}}
+          - name: NO_PROXY
+            value: {{.Values.global.httpProxy.noProxy}}
           - name: CLIENT_ID
             valueFrom:
               secretKeyRef:
