--- a/charts/tp-cp-proxy/values.yaml
+++ b/charts/tp-cp-proxy/values.yaml
@@ -47,8 +47,8 @@ global:
       # Client Id and secret are used to generate time bound access token
       iat: ""  # initial access token used to generate client credentials
     httpProxy:
-      httpProxyUrl:
-      httpsProxyUrl:
+      httpProxyUrl: http://192.168.1.205:3128
+      httpsProxyUrl: http://192.168.1.205:3128
       noProxy: .local, .internal
     logging:
       # The fluentbit configuration section.
