--- a/charts/dp-core-infrastructure/charts/haproxy/templates/controller-hpa.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy/templates/controller-hpa.yaml
@@ -12,11 +12,11 @@ distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-*/}}
 
-{{/* MAB 24-6 Just simply overide logic for Platform which does not support HPA /}}
+
+MAB 24-6 Just simply overide logic for Platform which does not support HPA
+*/}}
 {{- if .Capabilities.APIVersions.Has "autoscaling/v2" }} 
-{{/* ------------- */}}
 {{- if and (eq .Values.controller.kind "Deployment") .Values.controller.autoscaling.enabled }}
 {{- if not .Values.controller.keda.enabled }}
 {{- if or (.Capabilities.APIVersions.Has "autoscaling/v2") (semverCompare ">=1.23.0-0" .Capabilities.KubeVersion.Version) }}
